Fixed an issue with the course work div not shrinking on mobile.

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -65,6 +65,11 @@
     }
 
     /* ************************Main********************** */
+
+    .course-work {
+        min-width: 400px;
+    }
+
     .image-text-zig-zag {
         max-width: 1080px;
         flex-direction: row;
