--- a/styles/small.css
+++ b/styles/small.css
@@ -131,10 +131,6 @@ h2 {
   flex-wrap: wrap;
 }
 
-.course-work {
-  min-width: 400px;
-}
-
 .location {
   max-width: 500px;
 }
